[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragent-memory"
version = "0.2.0"
description = "Multimodal RAG memory layer — ingest text and images, search with natural language"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Paolo Lamoratta" },
]
keywords = ["rag", "multimodal", "embeddings", "chromadb", "openclip", "image-captioning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "chromadb>=1.5",
    "open_clip_torch>=3.3",
    "torch>=2.8",
    "torchvision>=0.27",
    "Pillow>=12.0",
    "huggingface-hub>=1.20",
    "PyMuPDF",
    "python-docx",
]

[project.optional-dependencies]
captioning = [
    "transformers>=4.45",
    "datasets",
    "tqdm",
]
openvino = [
    "openvino>=2025.0",
    "onnx>=1.17",
    "onnxscript>=0.7",
]

[tool.setuptools]
py-modules = [
    "main",
    "embedder",
    "chunker",
    "dbmanager",
    "captioner",
    "loader",
    "vision_encoder_openvino",
]
